--- a/i3/config
+++ b/i3/config
@@ -47,11 +47,11 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id amixer sset 'Master' 5%+ && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id  amixer sset 'Master' 5%- && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer sset 'Master' 5%+ && pkill -RTMIN+1 i3blocks
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer sset 'Master' 5%- && pkill -RTMIN+1 i3blocks 
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight +3
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -3
-bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id amixer sset 'Master' toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
