--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,7 +1,10 @@
+env:
+  TERM: xterm-256color
+
 window:
   padding:
-    x: 5
-    y: 5
+    x: 10
+    y: 10
   dimensions:
     columns: 70
     lines: 22
@@ -12,7 +15,7 @@ window:
 font:
   offset:
     x: 0
-    y: -3
+    y: 0
   normal:
     family: monospace
     style: Regular
@@ -37,10 +40,10 @@ colors:
     # Cursor colors
     cursor:
         text: "#24273A" # base
-        cursor: "#F4DBD6" # rosewater
+        cursor: "#A6DA95" # rosewater
     vi_mode_cursor:
         text: "#24273A" # base
-        cursor: "#B7BDF8" # lavender
+        cursor: "#A6DA95" # lavender
 
     # Search colors
     search:
