--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -141,6 +141,7 @@ opacity-rule = [ "100:class_g *= 'firefox'",
 		 "100:class_g *= 'Xfdesktop-settings'",
 		 "100:class_g *= 'Chromium-browser'",
 		 "100:class_g *= 'Xfce4-settings-manager'",
+		 "100:class_g *= 'ui-PlanAhead'",
 		 "80:class_g *= 'Rofi'",
          "95:class_g  *= 'jetbrains-idea-ce'",
          "90:class_g  *= 'libreoffice-writer'",
