--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -21,7 +21,7 @@ include-file = $HOME/.config/polybar/modules.ini
 include-file = $HOME/.config/polybar/colors.ini
 
 [bar/example]
-width = 1900
+width = 2540
 height = 40pt
 radius = 0
 offset-x = 10
@@ -62,11 +62,11 @@ wm-restack = i3
 override-redirect = true
 
 [bar/secondary]
-width = 99%
-height = 20pt
+width = 1060
+height = 40pt
 radius = 0
-offset-x = 0.5%
-offset-y = 10
+offset-x = 10
+offset-y = 5
 monitor = HDMI-2
 monitor-strict = true
 
@@ -77,7 +77,7 @@ foreground = ${colors.text}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 2pt
 border-color = ${colors.blue}
 
 padding-left = 0
@@ -85,13 +85,11 @@ padding-right = 1
 
 module-margin = 1
 
-separator = |
-separator-foreground = ${colors.text}
+font-0 = monospace;2
+font-1 = "Symbols Nerd Font Mono:size=12;2.5"
 
-font-0 = monospace;1.5
-
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-left = logo xworkspaces xwindow
+modules-right = pulseaudio date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -105,3 +103,4 @@ enable-ipc = true
 wm-restack = i3
 
 override-redirect = true
+
